Prevent overscroll to control drags that go offscreen

--- a/style.css
+++ b/style.css
@@ -76,6 +76,9 @@ body {
     font-family: Verdana, Arial, sans-serif;
     margin: 0px;
     padding: 20px;
+
+    /* Disables overscroll behavior */
+    overscroll-behavior: none;
 }
 
 /* Navbar */
